--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="form-leads">
 
                     <form action="https://gmail.us10.list-manage.com/subscribe/post?u=9b22797bb545c29ddedd2303e&amp;id=bea793d906&amp;f_id=00d3dee5f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self" novalidate="">
-                        <div id="mc_embed_signup_scroll"><h2>Inscrever>
+                        <div id="mc_embed_signup_scroll"><h2>
                         
                         
                         <h2>INSIRA SEUS DADOS <br>
